[gd_scene load_steps=6 format=3 uid="uid://cpe2p1qu8ir8n"]

[ext_resource type="Script" path="res://views/shop/shop_item.gd" id="1_6cyv7"]

[sub_resource type="LabelSettings" id="LabelSettings_fady3"]
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_toksv"]
font_size = 24
font_color = Color(1, 1, 1, 0.501961)

[sub_resource type="LabelSettings" id="LabelSettings_w1mg8"]
font_size = 24

[sub_resource type="Theme" id="Theme_fbxdc"]
default_font_size = 32
Button/colors/font_color = Color(1, 1, 1, 1)
Button/constants/h_separation = 18

[node name="ShopItem" type="HBoxContainer"]
theme_override_constants/separation = 35
script = ExtResource("1_6cyv7")
item_name = "Node"
item_description = "Node description here"
icon_bg_color = Color(0.202, 0.18, 0.4, 1)
can_buy = true

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="IconBackground" type="TextureRect" parent="CenterContainer"]
self_modulate = Color(0.202, 0.18, 0.4, 1)
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="Icon" type="TextureRect" parent="CenterContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Node"
label_settings = SubResource("LabelSettings_fady3")

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Node description here"
label_settings = SubResource("LabelSettings_toksv")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_w1mg8")

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="CenterContainer2" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(142, 142)
layout_mode = 2

[node name="Button" type="Button" parent="CenterContainer2"]
clip_children = 2
z_index = 1
custom_minimum_size = Vector2(100, 70)
layout_mode = 2
focus_mode = 0
theme = SubResource("Theme_fbxdc")
action_mode = 0
text = "100k"

[connection signal="pressed" from="CenterContainer2/Button" to="." method="_buy_button_pressed"]
